# grocery-stuff

./: .gitignore  README.md  alembic.ini  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 19a48c3b5adb_create_stores_and_products_tables.py
app/: __init__.py  crud.py  database.py  load_data.py  main.py  models.py  schemas.py
app/routers/: products.py  stores.py
data/: dummy_products.json
frontend/: index.html
scripts/: setup.sh  start.sh
